# cookiecutter-python-cli

./: .cookiecutter.json  .gitignore  CONTRIBUTING.md  Justfile  LICENSE  Makefile  README.md  cookiecutter.json  justfile  pyproject.toml  update.sh
.github/workflows/: check.yaml  pypi.yaml
.readme.md/: config-sample.md  help.md
hooks/: post_gen_project.sh
tests/: fixme.md
tests/readme/: config-sample.md  help.md  make-help.md
{{cookiecutter._dest_dir}}/: .cookiecutter.json  CONTRIBUTING.md  Justfile  Makefile  README.md  pyproject.toml
{{cookiecutter._dest_dir}}/.github/workflows/: check.yaml  pypi.yaml
{{cookiecutter._dest_dir}}/tests/readme/: config-sample.md  help.md  make-help.md
{{cookiecutter.dest_dir}}/: Makefile  README.md  pyproject.toml
{{cookiecutter.dest_dir}}/.github/workflows/: check.yaml  pypi.yaml
{{cookiecutter.dest_dir}}/tests/: fixme.md
{{cookiecutter.hyphenated}}/: pyproject.toml
{{cookiecutter.hyphenated}}/.readme.md/: help.md
