[build-system]
requires = [
    "setuptools >= 64.0",
    "setuptools_scm[toml] >= 6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.hyphenated }}"
description = "FIXME"
authors = [{name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"}]
license = {text = "MIT"}
readme = {file="README.md", content-type="text/markdown"}
dynamic = ["version"]
classifiers = [ # https://pypi.org/classifiers/
    # FIXME: "Development Status :: …",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    # FIXME: "Topic :: …",
]
requires-python = "~= 3.8"
dependencies = [
    "PyYAML",
    "click ~= 8.0",
    "click-config-file",
    "importlib-metadata; python_version<'3.10'",
    "platformdirs >= 2.1",
]

[project.optional-dependencies]
dev = [
    "build >= 0.7",
    "flake8",
    "isort >= 5.0",
    "mypy >= 0.900",
    "prysk == 0.16.0",
    "twine",
    "types-PyYAML",
]
test = [
    "pytest",
]

[project.urls]
"Homepage" = "https://github.com/{{ cookiecutter.author_github }}/{{ cookiecutter.hyphenated }}"
"Release Notes" = "https://github.com/{{ cookiecutter.author_github }}/{{ cookiecutter.hyphenated }}/releases"
"Issues" = "https://github.com/{{ cookiecutter.author_github }}/{{ cookiecutter.hyphenated }}/issues"
"CI" = "https://github.com/{{ cookiecutter.author_github }}/{{ cookiecutter.hyphenated }}/actions"
"Donations (GitHub)" = "https://github.com/sponsors/{{ cookiecutter.author_github }}"
{%- if cookiecutter.author_paypal %}
"Donations (PayPal)" = "https://www.paypal.me/{{ cookiecutter.author_paypal }}/10EUR"
{%- endif %}

[project.scripts]
{{ cookiecutter.hyphenated }} = "{{ cookiecutter.underscored }}.cli:cli"

[tool.gha-check-distro]
dependencies-apt = [
    "python3-build",
    "python3-click",
    "python3-configobj",
    "python3-flake8",
    "python3-importlib-metadata",
    "python3-isort",
    "python3-mypy",
    "python3-pip",
    "python3-pip-whl",
    "python3-platformdirs",
    "python3-pytest",
    "python3-typeshed",
    "python3-venv",
    "python3-yaml",
    "twine",
]

[tool.setuptools_scm]
{%- if cookiecutter._setuptools_scm_root %}
root = "{{ cookiecutter._setuptools_scm_root }}"
{%- endif %}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.mypy]
python_executable = ".venv/bin/python3"
show_error_codes = true

[tool.isort]
profile = "open_stack"

[tool.ruff]
line-length = 120

# vim:set et:
